# Functions

./: .gitignore  CoordSystems.py  Functions_1D.py  Functions_2D.py  Functions_3D.py  Functions_Base.py  Functions_Discrete.py  README.md  __init__.py  pyproject.toml
Functions_Base/: __init__.py  combinators.py  func_base.py  leaves.py
agent_docs/: architecture.md  coordinate_systems.md
examples/: 1d_functions.py  2d_functions.py  3d_cartesian.py  3d_cylindrical.py  composition.py  coord_systems.py  discrete_sequences.py  sum_of_exps.py
tests/: conftest.py  helpers.py  test_coords.py  test_derivatives.py  test_integration.py  test_laplacian.py  test_separable.py  test_structural.py
